--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: #ccc;
+  color: #838383;
 }
 body {
   background-color: #161616;
